-0.3.3
Add three new settings to the Settings Page
  -Use Soft Tabs (on or off)
  -Tab Size (2, 4, 6, or 8)
  -Show Invisibles (on or off) (shows whitespaces, tabs and spaces, etc)
Set editor defaults to use soft tabs with a setting of 4 tab size, and show invisibles off

-0.3.2
Navigator: Add ability to create folders at all levels.
Debugger: Fix display of local vs global variables.
Terminal: Set terminal width based on containing parent, use entire width and height.
Terminal: Resize browser window resizes terminal appropriately.
Remove file creation and uploads in adafruit repository (it would fail anyways) project

-0.3.1
Fix for debugger hanging when stderr is written from script being debug.

-0.3.0
New Python Debugger
Upgrade Node.js to 0.8 (new installations only)
Include Node.js binaries with WebIDE
Fix Cloning repositories originating from Bitbucket.

-0.2.5
Run visualizer as sudo to allow access to GPIO

-0.2.4
New visualization feature for Python
Added ability to change font sizes in the editor and the terminal
New settings manager added, currently only has font size, but more can be added
Fix for long file names causing strange wrapping

-0.2.3
Fix server failing to start on reboot of Pi.

-0.2.2
Fix for false redirects to /setup even if bitbucket and git is already configured.
Change page title based on what directory or file is open.
Update Ace to the latest version, fixing line numbering
Detect if port 80 is in use during install, and try 3000 instead.
Set path to open editor at end of install script to actual hostname.
Install python-smbus as part of the installation process.
Add symlink for repositories to webide users home path.
Fix for closing the schedule manager breaking the editor toolbar.
Set default as using hard tabs for editing files for now.

-0.2.1
Job scheduler for automating script execution.  Run a script "every 15 minutes", for example.
Schedule manager for toggling jobs, and deleting jobs.