@@ -4,6 +4,7 @@ Add three new settings to the Settings Page
   -Tab Size (2, 4, 6, or 8)
   -Show Invisibles (on or off) (shows whitespaces, tabs and spaces, etc)
 Set editor defaults to use soft tabs with a setting of 4 tab size, and show invisibles off
+Add a default .gitignore file to reduce chance of .pyc files getting pushed out to bitbucket.
 
 -0.3.2
 Navigator: Add ability to create folders at all levels.
